Added date ranges

--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -149,9 +149,27 @@ rosetta:
                   to: "2050"
             - path: "creation.date.from"
               agg_name: "dateCentury"
-              format: "yyyy"
+              format: "y G || y"
               date_ranges:
-                - from: "0001"
+                - from: "9000 BC"
+                  to: "8001 BC"
+                - from: "8000 BC"
+                  to: "7001 BC"
+                - from: "7000 BC"
+                  to: "6001 BC"
+                - from: "6000 BC"
+                  to: "5001 BC"
+                - from: "5000 BC"
+                  to: "4001 BC"
+                - from: "4000 BC"
+                  to: "3001 BC"
+                - from: "3000 BC"
+                  to: "2001 BC"
+                - from: "2000 BC"
+                  to: "1001 BC"
+                - from: "1000 BC"
+                  to: "1 BC"
+                - from: "1"
                   to: "0100"
                 - from: "0101"
                   to: "0200"
