Added date ranges

--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -211,6 +211,8 @@ rosetta:
                   to: "2000"
                 - from: "2001"
                   to: "2100"
+                - from: "2100"
+                  to: "40000"
 
           path_config:
             paths:
