--- a/kubernetes/ohos/rosetta-3/kustomization.yml
+++ b/kubernetes/ohos/rosetta-3/kustomization.yml
@@ -13,3 +13,4 @@ configMapGenerator:
       - ./config/generic_search_defaults.json
       - ./config/generic_search_modifications.json
       - ./config/singularize_creation.json
+      - ./config/inject_date_hist.json
