--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -103,6 +103,7 @@ rosetta:
                 policy: list
                 names:
                   - generic-to-elastic
+                  - inject-date-hist
           data: *global-data-transforms
 
   transform:
