--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -57,6 +57,7 @@ rosetta:
             policy: list
             names:
               - to-generic-search
+              - generic-to-elastic
               - ciim/search/request
           response:
             policy: list
