Added format to creation date

--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -153,6 +153,7 @@ rosetta:
             - path: "creation.date.from"
               agg_name: "fromDate"
             - path: "creation.date.from"
+              format: "y G || y"
               agg_name: "creationDate"
             - path: "creation.date.to"
               agg_name: "toDate"
