--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -144,11 +144,13 @@ rosetta:
             - path: "creation.date.from"
               agg_name: "creationDecade"
               format: "y G || y"
+              offset: "31536000000ms"
               fixed_interval: "315360000000ms"
             - path: "creation.date.from"
               agg_name: "creationYear"
               format: "y G || y"
               fixed_interval: "31536000000ms"
+              offset: "31536000000ms"
           date_aggregations:
             - path: "creation.date.from"
               agg_name: "fromDate"
