--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -144,12 +144,11 @@ rosetta:
             - path: "creation.date.from"
               agg_name: "creationDecade"
               format: "y G || y"
-              fixed_interval: "315360000000ms"
+              fixed_interval: "315532560000ms"
             - path: "creation.date.from"
               agg_name: "creationYear"
               format: "y G || y"
-              fixed_interval: "31536000000ms"
-              offset: "-31536000000ms"
+              calendar_interval: "1y"
           date_aggregations:
             - path: "creation.date.from"
               agg_name: "fromDate"
