--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -144,8 +144,8 @@ rosetta:
             - path: "creation.date.from"
               agg_name: "creationDecade"
               format: "y G || y"
-              fixed_interval: "315569520000ms"
-              offset: "0d"
+              fixed_interval: "3652d"
+              offset: "-3d"
             - path: "creation.date.from"
               agg_name: "creationYear"
               format: "y G || y"
