renamed ohos alias

--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -215,7 +215,8 @@ rosetta:
               datatype: "@datatype.base"
               property: "property.name.value.keyword"
               place: "place.name.value.keyword"
-              collection: "hierarchy.summary.title.keyword"
+              collection: "parent.summary.title.keyword"
+              collectionOhos: "hierarchy.summary.title.keyword"
               date: "creation.date.from"
               title: "summary.title.keyword"
               group: "@datatype.group.value"
