--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -223,6 +223,8 @@ rosetta:
               community: "community.summary.title.keyword"
               collectionMorrab: "collectionMorrab.summary.title.keyword"
               collectionSurrey: "collectionSurrey.summary.title.keyword"
+              collectionMorrabAll: "collectionMorrab.summary.title.keyword"
+              collectionSurreyAll: "collectionSurrey.summary.title.keyword"
               enrichmentLoc: "enrichment.loc.value.keyword"
               enrichmentOrg: "enrichment.org.value.keyword"
               enrichmentPer: "enrichment.per.value.keyword"
@@ -237,6 +239,10 @@ rosetta:
               size: 10
             - name: collectionSurrey
               size: 10
+            - name: collectionMorrabAll
+              size: 200
+            - name: collectionSurreyAll
+              size: 200
             - name: enrichmentLoc
               size: 20
             - name: enrichmentLoc
