--- a/kubernetes/ohos/ingress/ingress.yml
+++ b/kubernetes/ohos/ingress/ingress.yml
@@ -38,3 +38,10 @@ spec:
                 name: ui-service
                 port:
                   name: ui-port
+          - path: /rosetta-3/export
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-3-export-service
+                port:
+                  name: rosetta-port
