--- a/kubernetes/ohos/rosetta-3-export/config/application.yml
+++ b/kubernetes/ohos/rosetta-3-export/config/application.yml
@@ -402,11 +402,11 @@ rosetta:
       - name: elasticsearch
         type: elasticsearch
         properties:
-          host: ciim-public-tna-es-http.tna-ohos
+          host: ciim-public-clean-tna-es-http.tna-ohos
           port: 9200
           index: ciim
           username: elastic
-          password: P04G47lojwvwk72kc5t84JW
+          password: P04G47lojwvwk72kc5t84JW7
           client_timeout: 60000
 
   monitoring:
