add rosetta3 graphql

--- a/kubernetes/ohos/ingress/ingress.yml
+++ b/kubernetes/ohos/ingress/ingress.yml
@@ -45,3 +45,10 @@ spec:
                 name: rosetta-3-export-service
                 port:
                   name: rosetta-port
+          - path: /rosetta-3/graphql
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-3-graphql-service
+                port:
+                  name: rosetta-port
