add rosetta3 graphiql endpoint

--- a/kubernetes/ohos/ingress/ingress.yml
+++ b/kubernetes/ohos/ingress/ingress.yml
@@ -52,3 +52,10 @@ spec:
                 name: rosetta-3-graphql-service
                 port:
                   name: rosetta-port
+          - path: /rosetta-3/graphiql
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-3-graphql-service
+                port:
+                  name: rosetta-port
