adjust graphql schema

--- a/kubernetes/ohos/rosetta-3-graphql/config/application.yml
+++ b/kubernetes/ohos/rosetta-3-graphql/config/application.yml
@@ -113,6 +113,9 @@ rosetta:
                 name: "name.*"
                 parent: "parent.*"
                 maker: "creation.maker.*"
+                enrichment: "enrichment.*"
+                subject: "subject.summary.title"
+                repository: "repository.code.value"
 
       - name: unpack-request
         type: proteus
