--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -231,6 +231,7 @@ rosetta:
               collectionMorrabAll: "collectionMorrab.summary.title.keyword"
               collectionSurreyAll: "collectionSurrey.summary.title.keyword"
               collectionCain: "collectionCain.summary.title.keyword"
+              collectionMoloney: "collectionMoloney.summary.title.keyword"
               enrichmentLoc: "enrichment.loc.value.keyword"
               enrichmentOrg: "enrichment.org.value.keyword"
               enrichmentPer: "enrichment.per.value.keyword"
