graphql - schema changes

--- a/kubernetes/ohos/rosetta-3-graphql/config/application.yml
+++ b/kubernetes/ohos/rosetta-3-graphql/config/application.yml
@@ -87,44 +87,40 @@ rosetta:
       - name: elastic-generic-search
         type: elastic-generic-search
         properties:
+          default_aggregation_size: 30
           path_config:
             paths:
-              collection: "collection.summary.title.keyword"
-              collectionMorrab: "collectionMorrab.summary.title.keyword"
-              collectionSurrey: "collectionSurrey.summary.title.keyword"
               colour: "colour.value.keyword"
-              community: "community.summary.title.keyword"
+              community_archive_ID: "community.summary.title.keyword"
               condition: "condition.value.keyword"
-              coordinates_lat: "coordinates.lat"
-              coordinates_lon: "coordinates.lon"
+              latitude: "coordinates.lat"
+              longitude: "coordinates.lon"
               copies: "copies.value.keyword"
-              creation_date: "creation.date.value"
-              datatype: "@datatype.base"
+              date: "creation.date.from"
               description: "description.value.keyword"
-              enrichment_location: "enrichment.loc.value.keyword"
-              enrichment_date: "enrichment.date.value"
-              enrichment_misc: "enrichment.misc.value.keyword"
-              enrichment_org: "enrichment.org.value.keyword"
-              enrichment_person: "enrichment.per.value.keyword"
-              hierarchy: "hierarchy.summary.title.keyword"
+              location_named_entity: "enrichment.loc.value.keyword"
+              date_named_entity: "enrichment.date.value"
+              miscellaneous_named_entity: "enrichment.misc.value.keyword"
+              organisation_named_entity: "enrichment.org.value.keyword"
+              person_named_entity: "enrichment.per.value.keyword"
+              item_hierarchy: "hierarchy.summary.title.keyword"
               identifier: "identifier.value.keyword"
-              inscription: "inscription.value.keyword"
-              institution: "institution.name.value.keyword"
-              legal: "legal.holder.keyword"
+              inscription: "inscription.value"
+              owner: "institution.name.value.keyword"
+              rights_holder: "legal.rights.holder"
+              rights: "legal.rights.type"
               level: "level.value"
               licence: "licence.value.keyword"
-              maker: "creation.maker.name.value.keyword"
-              measurements: "measurements.dimensions.value"
-              multimedia: "multimedia.@admin.id"
-              name: "name.value.keyword"
-              organisation: "organisation.name.value.keyword"
-              parent: "parent.summary.title.keyword"
-              place: "place.name.value.keyword"
-              place_hierarchy: "place.hierarchy.value.keyword"
+              creator: "creation.maker.name.value.keyword"
+              extent: "measurements.dimensions.value"
+              format: "name.value.keyword"
+              community_archive: "organisation.name.value.keyword"
+              parent_record_ID: "parent.@admin.id"
+              location: "place.name.value.keyword"
+              location_hierarchy: "place.hierarchy.value.keyword"
               provenance: provenance.text.value.keyword
               publisher: creation.publisher.name.value.keyword
-              related_material: related.material.value.keyword
-              repository: "repository.code.value.keyword"
+              place_of_deposit: "repository.code.value.keyword"
               subject: "subject.summary.title.keyword"
               title: "summary.title.keyword"
           date_aggregations:
@@ -197,43 +193,38 @@ rosetta:
           config:
             properties:
               fields:
-                collection: "collection.@admin.id"
-                collectionMorrab: "collectionMorrab.@admin.id"
-                collectionSurrey: "collectionSurrey.@admin.id"
                 colour: "colour.value"
-                community: "community.*"
+                community_archive_ID: "community.*"
                 condition: "condition.value"
-                coordinates_lat: "coordinates.lat"
-                coordinates_lon: "coordinates.lon"
+                latitude: "coordinates.lat"
+                longitude: "coordinates.lon"
                 copies: "copies.value"
-                creation_date: "creation.date.*"
-                datatype: "@datatype.base"
+                date: "creation.date.*"
                 description: "description.value"
-                enrichment_date: "enrichment.date.*"
-                enrichment_location: "enrichment.loc.*"
-                enrichment_misc: "enrichment.misc.*"
-                enrichment_org: "enrichment.org.*"
-                enrichment_person: "enrichment.per.*"
-                hierarchy: "hierarchy.@admin.id"
-                id : "@admin.id"
-                identifier: "identifier.*"
+                date_named_entity: "enrichment.date.*"
+                location_named_entity: "enrichment.loc.*"
+                miscellaneous_named_entity: "enrichment.misc.*"
+                organisation_named_entity: "enrichment.org.*"
+                person_named_entity: "enrichment.per.*"
+                item_hierarchy: "hierarchy.@admin.id"
+                admin_ID : "@admin.id"
+                community_identifier: "identifier.*"
                 inscription: "inscription.value"
-                institution: "institution.*"
-                legal: "legal.holder"
+                owner: "institution.*"
+                rights_holder: "legal.rights.holder"
+                rights: "legal.rights.type"
                 level: "level.value"
                 licence: "licence.value"
-                maker: "creation.maker.*"
-                measurements: "measurements.dimensions"
-                multimedia: "multimedia.@admin.id"
-                name: "name.*"
-                organisation: "organisation.*"
-                parent: "parent.*"
-                place: "place.name.value"
-                place_hierarchy: "place.hierarchy.value"
+                creator: "creation.maker.*"
+                extent: "measurements.dimensions"
+                format: "name.*"
+                community_archive: "organisation.*"
+                parent_record_ID: "parent.*"
+                location: "place.name.value"
+                location_hierarchy: "place.hierarchy.value"
                 provenance: provenance.text.value
                 publisher: creation.publisher.name.value
-                related_material: related.material.value
-                repository: "repository.code.value"
+                place_of_deposit: "repository.code.value"
                 subject: "subject.summary.title"
                 title: "summary.title"
 
