Ohos-Elastic Search

--- a/kubernetes/ohos/rosetta-3-test/kustomization.yml
+++ b/kubernetes/ohos/rosetta-3-test/kustomization.yml
@@ -2,7 +2,7 @@ namespace: tna-ohos
 resources:
   - rosetta.yml
 configMapGenerator:
-  - name: rosetta-3-config
+  - name: rosetta-3-config-test
     files:
       - ./config/aggs_count_to_doc_count.json
       - ./config/application.yml
